Fix image swap flicker with CSS sprites.

--- a/chrome/css/panel.css
+++ b/chrome/css/panel.css
@@ -9,6 +9,7 @@ a:hover {
 body {
 	color: #444;
 	font: normal 15px 'Helvetica Neue', 'Helvetica', sans-serif;
+	margin: 8px;
 	width: 310px;
 }
 
@@ -55,14 +56,10 @@ td {
 }
 
 #header {
-	background: url(/icons/38.png) no-repeat left center;
 	font-size: 16px;
+	line-height: 1.2em;
 	margin: 0 auto;
 	padding: 10px 70px;
-}
-
-#header.inactive {
-	background: url(/icons/38_off.png) no-repeat left;
 }
 
 #status-text {
@@ -72,6 +69,28 @@ td {
 
 #toggle {
 	font-size: 14px;
+}
+
+.sprites {
+	background: url(/images/panel_sprites.png) no-repeat left center;
+	display: inline-block;
+}
+
+.toplogo {
+	float: left;
+	margin-top: 10px;
+}
+
+.logo-active {
+	width: 38px;
+	height: 38px;
+	background-position: 0 0;
+}
+
+.logo-inactive {
+	width: 38px;
+	height: 38px;
+	background-position: 0 -38px;
 }
 
 .warning {
